BAU: Update to add /journey-transitions endpoint
